Fix rendering hang on mobile and Safari

--- a/client/src/styles/css/application.css
+++ b/client/src/styles/css/application.css
@@ -133,7 +133,8 @@ nav.nav {
     margin-right: 8px; }
 
 .btn {
-  box-shadow: none; }
+  box-shadow: none;
+  cursor: pointer !important; }
   @media screen and (max-width: 767px) {
     .btn {
       font-size: .9em;
@@ -220,6 +221,7 @@ nav.nav {
   text-align: center; }
   @media screen and (max-width: 767px) {
     .set {
+      border-radius: none;
       border-width: 0 0 2px 0;
       margin: 0;
       padding: 20px; } }
