--- a/client/src/styles/scss/components/buttons.scss
+++ b/client/src/styles/scss/components/buttons.scss
@@ -18,6 +18,7 @@
 
 .btn {
   box-shadow: none;
+  cursor: pointer !important;
 
   @media screen and (max-width: $screen-xs-max) {
     font-size: .9em;
