--- a/client/src/styles/scss/components/sets.scss
+++ b/client/src/styles/scss/components/sets.scss
@@ -15,6 +15,7 @@
   text-align: center;
 
   @media screen and (max-width: $screen-xs-max) {
+    border-radius: none;
     border-width: 0 0 2px 0;
     margin: 0;
     padding: 20px;
